--- a/foundry.toml
+++ b/foundry.toml
@@ -3,4 +3,4 @@ src = "src"
 out = "out"
 libs = ["lib"]
 
-# See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
+rpc_endpoints = { mainnet = "https://eth.llamarpc.com" }
