--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/forge-std"]
 	path = lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "lib/fuzzlib"]
+	path = lib/fuzzlib
+	url = https://github.com/perimetersec/fuzzlib
