--- a/echidna-config.yaml
+++ b/echidna-config.yaml
@@ -7,6 +7,7 @@ prefix: echidna_
 corpusDir: echidna-corpus
 
 testLimit: 10000000 # 10M
+balanceContract: 1000000000000000000000000
 
 rpcUrl: "https://eth.llamarpc.com" 
 rpcBlock: 17806055 
